--- a/CSS/mephiles.css
+++ b/CSS/mephiles.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     /* background-color: blue ; */
-    background-color: black;
+    background-image: url(../IMG/Go\ Fast\ Sonic\ The\ Hedgehog\ Sticker\ by\ Leroy\ Patterson.gif);
    
 }
 
