consertando alguns erros

--- a/CSS/mephiles.css
+++ b/CSS/mephiles.css
@@ -6,7 +6,8 @@
     justify-content: center;
     align-items: center;
     /* background-color: blue ; */
-    background-image: url(../IMG/Go\ Fast\ Sonic\ The\ Hedgehog\ Sticker\ by\ Leroy\ Patterson.gif);
+    background-image: url(../IMG/tufq65kwhmaz.webp);
+    background-repeat: no-repeat;
    
 }
 
