--- a/CSS/silver.css
+++ b/CSS/silver.css
@@ -5,9 +5,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(..);
+    background-image: url(../IMG/the-multiverse-tree-v0-5yjsxcm4sqzb1.jpg);
     background-repeat: no-repeat;
-    background-color: black;
+    /* background-color: black; */
    
 }
 
