--- a/CSS/silver.css
+++ b/CSS/silver.css
@@ -66,6 +66,8 @@ li{
     border-radius: 10px;
     margin-top: 135px;
     background-color: var(--color-primary4);
+    cursor: pointer;
+    transition: all 0.3s ease;
    
 }
 
@@ -75,6 +77,8 @@ li{
     border-radius: 10px;
     background-color: var(--color-primary4);
     margin-top: -100px;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
 
 .btn-cadastrar a{
@@ -83,10 +87,20 @@ li{
     
 }
 
+.btn-cadastrar:hover{
+    transform: translateY(-2px);
+
+}
+
 .btn-listar a{
     color: aliceblue;
     text-decoration: none;
     
+}
+
+.btn-listar:hover{
+    transform: translateY(-2px);
+
 }
 
 tr{
